force-app/main/default/objects/Measure__c/Measure__c.object-meta.xml
<CustomObject>
    <label>Measure</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Measures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>