force-app/main/default/objects/Measure__c/fields/Baseline_Currency__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Currency__c</fullName>
    <label>Baseline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>