force-app/main/default/objects/Measure__c/fields/Baseline_Date__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Date__c</fullName>
    <label>Baseline Date</label>
    <type>Date</type>
</CustomField>