force-app/main/default/objects/Measure__c/fields/Baseline_Formula__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Formula__c</fullName>
    <formula>CASE( RecordType.DeveloperName,
&quot;Currency&quot;, &quot;$&quot;&amp;text(Baseline_Currency__c),
&quot;RUL_Currency_Read_Only&quot;,&quot;$&quot;&amp;text(Baseline_Currency__c),
&quot;Number&quot;, text(Baseline_Number__c), 
&quot;RUL_Number_Read_Only&quot;,text(Baseline_Number__c),
&quot;Percent&quot;, text(Baseline_Percent__c*100)&amp;&quot;%&quot;,
&quot;RUL_Percent_Read_Only&quot;,text(Baseline_Percent__c*100)&amp;&quot;%&quot;,
&quot;Text&quot;, Baseline_Text__c ,
&quot;RUL_Text_Read_Only&quot;,Baseline_Text__c,
&quot;&quot;
)</formula>
    <label>Baseline</label>
    <type>Text</type>
</CustomField>