force-app/main/default/objects/Measure__c/fields/Baseline_Number__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Number__c</fullName>
    <label>Baseline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>