force-app/main/default/objects/Measure__c/fields/Baseline_Text__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Text__c</fullName>
    <label>Baseline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>