force-app/main/default/objects/Measure__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiative</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Partner__c</field>
            <operation>equals</operation>
            <valueField>Initiative__c.Partner__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Initiative__c</referenceTo>
    <relationshipLabel>Measures</relationshipLabel>
    <relationshipName>Measures</relationshipName>
    <type>Lookup</type>
</CustomField>