force-app/main/default/objects/Measure__c/fields/Measure_ID__c.field-meta.xml
<CustomField>
    <fullName>Measure_ID__c</fullName>
    <displayFormat>ME{000000}</displayFormat>
    <label>Measure ID</label>
    <type>AutoNumber</type>
</CustomField>