force-app/main/default/objects/Measure__c/fields/Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Outcomes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outcome</label>
    <referenceTo>Outcome__c</referenceTo>
    <relationshipLabel>Measures</relationshipLabel>
    <relationshipName>Outcome_Measures</relationshipName>
    <type>Lookup</type>
</CustomField>