force-app/main/default/objects/Measure__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Measures</relationshipLabel>
    <relationshipName>Measures</relationshipName>
    <type>Lookup</type>
</CustomField>