force-app/main/default/objects/Measure__c/fields/Result_Achieved_Icon__c.field-meta.xml
<CustomField>
    <fullName>Result_Achieved_Icon__c</fullName>
    <formula>IF(ISBLANK(TEXT( Status__c )),null, 

IMAGE( 

CASE(TEXT( Status__c ), 

&quot;Met&quot;, $Setup.Icons__c.Green__c, 
&quot;Mostly Met&quot;,$Setup.Icons__c.Yellow__c, 
&quot;Partially Met&quot;,$Setup.Icons__c.Orange__c, 
&quot;Not Met&quot;,$Setup.Icons__c.Red__c,
&quot;Pending&quot;,$Setup.Icons__c.Grey__c,
&quot;Removed&quot;,$Setup.Icons__c.Orange__c,
&quot;Variation&quot;,$Setup.Icons__c.Orange__c,
&quot;&quot;),&quot;&quot;))</formula>
    <label>Result Achieved</label>
    <type>Text</type>
</CustomField>