force-app/main/default/objects/Measure__c/fields/Result_Formula__c.field-meta.xml
<CustomField>
    <fullName>Result_Formula__c</fullName>
    <formula>CASE( RecordType.DeveloperName, 
&quot;Currency&quot;, &quot;$&quot;&amp;text(Result_Currency__c),
&quot;RUL_Currency_Read_Only&quot;, &quot;$&quot;&amp;text(Result_Currency__c),
&quot;Number&quot;, text(Result_Number__c), 
&quot;RUL_Number_Read_Only&quot;,text(Result_Number__c),
&quot;Percent&quot;, text(Result_Percent__c*100)&amp;&quot;%&quot;, 
&quot;RUL_Percent_Read_Only&quot;,text(Result_Percent__c*100)&amp;&quot;%&quot;,
&quot;Text&quot;, Result_Text__c ,
&quot;RUL_Text_Read_Only&quot;, Result_Text__c ,
&quot;&quot; 
)</formula>
    <label>Result</label>
    <type>Text</type>
</CustomField>