force-app/main/default/objects/Measure__c/fields/Result_Number__c.field-meta.xml
<CustomField>
    <fullName>Result_Number__c</fullName>
    <label>Result</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>