force-app/main/default/objects/Measure__c/fields/Result_Percent__c.field-meta.xml
<CustomField>
    <fullName>Result_Percent__c</fullName>
    <label>Result</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>