force-app/main/default/objects/Measure__c/fields/Result_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Result_Rich_Text__c</fullName>
    <label>Result</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>