force-app/main/default/objects/Measure__c/fields/Result_Text__c.field-meta.xml
<CustomField>
    <fullName>Result_Text__c</fullName>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>