force-app/main/default/objects/Measure__c/fields/RUL_Old_RecordType_Id__c.field-meta.xml
<CustomField>
    <fullName>RUL_Old_RecordType_Id__c</fullName>
    <description>This field is used for storing the record type ID except the read only record type id.</description>
    <label>Old RecordType Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>