force-app/main/default/objects/Measure__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Update the Status when you receive results against this Measure.  This will generally be when you record the Result and Result Date.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Removed</fullName>
                <default>true</default>
                <label>Removed</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Partially Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>Variation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>