force-app/main/default/objects/Measure__c/fields/Target_Currency__c.field-meta.xml
<CustomField>
    <fullName>Target_Currency__c</fullName>
    <label>Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>