force-app/main/default/objects/Measure__c/fields/Target_Formula__c.field-meta.xml
<CustomField>
    <fullName>Target_Formula__c</fullName>
    <formula>CASE( RecordType.DeveloperName, 
&quot;Currency&quot;, &quot;$&quot;&amp;text(Target_Currency__c), 
&quot;RUL_Currency_Read_Only&quot;,&quot;$&quot;&amp;text(Target_Currency__c), 
&quot;Number&quot;, text(Target_Number__c), 
&quot;RUL_Number_Read_Only&quot;,text(Target_Number__c),
&quot;Percent&quot;, text(Target_Percent__c*100)&amp;&quot;%&quot;, 
&quot;RUL_Percent_Read_Only&quot;,text(Target_Percent__c*100)&amp;&quot;%&quot;,
&quot;Text&quot;, Target_Text__c , 
&quot;RUL_Text_Read_Only&quot;,Target_Text__c , 
&quot;&quot; 
)</formula>
    <label>Target</label>
    <type>Text</type>
</CustomField>