force-app/main/default/objects/Measure__c/fields/Target_Number__c.field-meta.xml
<CustomField>
    <fullName>Target_Number__c</fullName>
    <label>Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>