force-app/main/default/objects/Measure__c/fields/Target_Percent__c.field-meta.xml
<CustomField>
    <fullName>Target_Percent__c</fullName>
    <label>Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>