force-app/main/default/objects/Measure__c/recordTypes/Currency.recordType-meta.xml
<RecordType>
    <fullName>Currency</fullName>
    <active>true</active>
    <description>To capture financial measurements against KPIs</description>
    <label>Currency</label>
</RecordType>