force-app/main/default/objects/Measure__c/recordTypes/Currency_Completed.recordType-meta.xml
<RecordType>
    <fullName>Currency_Completed</fullName>
    <active>true</active>
    <description>Currency result uneditable</description>
    <label>Currency Completed</label>
</RecordType>