force-app/main/default/objects/Measure__c/recordTypes/Number.recordType-meta.xml
<RecordType>
    <fullName>Number</fullName>
    <active>true</active>
    <description>To represent numerical volume measurement of KPIs</description>
    <label>Number</label>
</RecordType>