force-app/main/default/objects/Measure__c/recordTypes/Number_Completed.recordType-meta.xml
<RecordType>
    <fullName>Number_Completed</fullName>
    <active>true</active>
    <description>Number result uneditable</description>
    <label>Number Completed</label>
</RecordType>