force-app/main/default/objects/Measure__c/recordTypes/Percent.recordType-meta.xml
<RecordType>
    <fullName>Percent</fullName>
    <active>true</active>
    <description>To reflect the percentage portion of a KPI benchmark or threshold</description>
    <label>Percent</label>
</RecordType>