force-app/main/default/objects/Measure__c/recordTypes/Percent_Completed.recordType-meta.xml
<RecordType>
    <fullName>Percent_Completed</fullName>
    <active>true</active>
    <description>Percent result uneditable</description>
    <label>Percent Completed</label>
</RecordType>