force-app/main/default/objects/Measure__c/recordTypes/RUL_Currency_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>RUL_Currency_Read_Only</fullName>
    <active>true</active>
    <description>This record type will be used to prevent edit of record when Inv schedule status is Approved or Signed.</description>
    <label>Currency Read Only</label>
</RecordType>