force-app/main/default/objects/Measure__c/recordTypes/RUL_Percent_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>RUL_Percent_Read_Only</fullName>
    <active>true</active>
    <description>This record type will be used to prevent edit of record when Inv schedule status is Approved or Signed.</description>
    <label>Percent Read Only</label>
</RecordType>