force-app/main/default/objects/Measure__c/recordTypes/Text.recordType-meta.xml
<RecordType>
    <fullName>Text</fullName>
    <active>true</active>
    <description>For qualitative and commentary based assessment of measures against KPIs</description>
    <label>Text</label>
</RecordType>