force-app/main/default/objects/Measure__c/recordTypes/Text_Completed.recordType-meta.xml
<RecordType>
    <fullName>Text_Completed</fullName>
    <active>true</active>
    <description>Text result uneditable</description>
    <label>Text Completed</label>
</RecordType>