force-app/main/default/objects/Measure__c/validationRules/Partner_User_Name_uneditable.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_User_Name_uneditable</fullName>
    <active>true</active>
    <description>Partner Users are not permitted to update the Measure Name</description>
    <errorConditionFormula>IF(AND(CONTAINS($Profile.Name,&apos;Partner&apos;),ISCHANGED(Name)),true,false)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Partner Users are not permitted to update the Measure Name</errorMessage>
</ValidationRule>